bug fix alignment with flex box

--- a/src/pages/TISC/Product/Attribute/styles/contentTypeModal.less
+++ b/src/pages/TISC/Product/Attribute/styles/contentTypeModal.less
@@ -2,7 +2,7 @@
   @height: 48px;
   .contentTypeFooter {
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     .contentTypeSubmitBtn {
       border-radius: 12px;
     }
